[package]
name = "feryr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies] 
util = {path = "../feryr_util", version =  "0.1.0"} 
feryr_prog = {path = "../feryr_prog", version =  "0.1.0"}
serde_json = "1.0" 
serde_yaml = "0.9"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
regex = "1"
rand = "0.8"
chrono = "0.4.19" 
ctrlc = "3.2.1"
libc = "0.2.105"
thread-id = "4.0.0"
clap = "2"
multimap='0.8.3'
memmap = "0.7.0"
fs_extra = "1.3.0"
nix = "0.23.0"
sysinfo = "0.21.2"