[package]
name = "feryr_prog"
version = "0.1.0"
edition = "2021" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]  
util = {path = "../feryr_util", version =  "0.1.0"} 
hypothesis = "0.10.4"
byteorder = "*"
wait-timeout = "0.2.0"
statrs = "0.16.0"
chrono = "0.4.19"
thiserror = "1.0"
likely_stable = "0.1.2" 
iota = "0.2.2"
failure = "0.1.0"
bytes = "1.0.0"
shared_memory = "0.12.0"
serde_json = "1.0"
multimap = "0.9.0" 
log = "0.4"
hex = "0.4"
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
ahash = "0.8.3"
rand = { version = "0.8", features = ["small_rng"] }
positioned-io = "0.3.1"
memmap2 = "0.5.0" 
regex = "1.7.0"
lazy_static = "*"
timeout-readwrite = "0.3.1"
vectorize = "0.2.0"
tokio = {version = "1.13", features = ["rt", "rt-multi-thread", "time"]}
portpicker = "0.1.1"  
ndarray = "0.15.1" 
onnxruntime = "0.0.14"  
nix = "0.23.0"
sysinfo = "0.21.2"

[dependencies.simd-json]
version = "0.7.0"
features = ["known-key", "swar-number-parsing", "allow-non-simd"]