[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "analysis_server"
path = "src/main.rs"

[[bin]]
name = "shm_to_json"
path = "src/shm_to_json.rs"

[[bin]]
name = "evaluation_server"
path = "src/evaluation_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
memmap = "0.7"
bincode = "1.3"
lazy_static = "1.4"
clap = "2.33"
serde_json = "1.0"
rand = "0.8"
indicatif = "0.16"
tokio = { version = "1.14.0", features = ["full"] }
chrono = "0.4"