[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
memmap = "0.7"
bincode = "1.3"
lazy_static = "1.4"
clap = "2.33"
serde_json = "1.0"
rand = "0.8"
indicatif = "0.16"