[package]
name = "sancov_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sancovruntime"
crate_type = ["staticlib", "rlib", "cdylib"]
#crate-type = ["dylib"]

[[bin]]
name = "sancov_server"
path = "src/sancov_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}

lazy_static = "1.4"
libc = "0.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
memmap = "0.7"
rand = "0.8"
tokio = { version = "1.14.0", features = ["full"] }
clap = "2.33"
serde_json = "1.0"
chrono = "0.4"

#[profile.release]
#panic = "abort"